--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "@types/three": "^0.162.0",
-    "three": "^0.162.0"
+    "three": "^0.162.0",
+    "three-nebula": "^10.0.3",
+    "three-nebula-types": "^1.0.1"
   }
 }
